examples/oci/prometheus-deploy.yaml
# Services to expose ports 

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: prometheus-kube-prometheus-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector-prometheus
spec:
  selector:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
  ports:
    - name: prometheus
      port: 8889
      targetPort: 8889
    - name: metrics
      port: 8888
      targetPort: 8888
