examples/oci/ingress.yaml
# Copyright (c) 2026 The Jaeger Authors.
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-demo-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.jaegertracing.io
      secretName: demo-jaeger-tls
  rules:
    - host: demo.jaegertracing.io
      http:
        paths:
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 16686
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
          - path: /hotrod
            pathType: Prefix
            backend:
              service:
                name: jaeger-hotrod
                port:
                  number: 80

---
# Separate Ingress to redirect / -> external site
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-root-redirect
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.jaegertracing.io/demo/
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.jaegertracing.io
      secretName: demo-jaeger-tls
  rules:
    - host: demo.jaegertracing.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # Backend is ignored due to redirect annotation; must be valid
              service:
                name: jaeger-query
                port:
                  number: 16686
